Clean up publish page to use default image if none selected. Also, remove the input box to allow user use their own image. Eventually, I need to add a file upload to allow them upload their own image. But for now, they have to use google image search. This helps to have a uniform looking image with reasonable size and everything since we have control over search engine configuration.

--- a/template/BrowseBuyOrderById.html
+++ b/template/BrowseBuyOrderById.html
@@ -77,6 +77,11 @@
 					| 
 					<span class="command-link" itemId="{{ order.key.id() }}" id="btn-delete">Delete</span>
 				{% endif %}
+
+				{% if order.can_close() %}
+					| 
+					<span class="command-link" itemId="{{ order.key.id() }}" id="btn-close">Close</span>
+				{% endif %}
 				
             {% elif cart.broker %}
             	{% if cart.broker == order.owner %}
