--- a/template/Home.html
+++ b/template/Home.html
@@ -24,7 +24,7 @@
 			<div class="get-started-button">Get Started</div>
 			</a>
 		</div>
-		<img src="/static/img/wrinkled_paper-wallpaper-1920x1080.jpg" style="position:absolute;top:0;"/>
+		<img src="/static/img/wrinkled_paper-wallpaper-1920x1080.jpg" class="bg">
 	</div>
 
 
