--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -47,6 +47,15 @@ table td{
 	font-size:9pt;
 }
 
+table#site-layout{
+	width:100%;
+	border:none;
+	border-collapse:collapse;
+}
+table#site-layout td{
+	vertical-align:top;
+}
+
 .header-layout td:nth-child(3n){
 	text-align:right;
 	vertical-align:middle;
@@ -707,6 +716,7 @@ table#fill-list{
 	padding: 5px 20px;
 	text-transform: uppercase;
 	vertical-align:middle;
+	text-align:center;
 }
 
 .my-button:hover {
@@ -1415,13 +1425,13 @@ button[item="submit-for-approval-btn"]:hover{
 /*.ariel-table td:nth-child(2n+1){*/
 .ariel-table td{
 	color:#898989;
-	text-align:right;	
+	text-align:right;
+	vertical-align:middle;	
 }
 .ariel-table input{
 	background-color:#ebebeb;
 	border:1px solid #00bec6; 
 	width: 520px;
-	height: 20px;
 	border-radius: 4px;
 	webkit-border-radius: 4px;
 	moz-border-radius:4px;
@@ -1725,15 +1735,6 @@ div.pin-in-focus img{
 }
 .image-house{
 	margin-top:20px;
-}
-
-table#site-layout{
-	width:100%;
-	border:none;
-	border-collapse:collapse;
-}
-table#site-layout td{
-	vertical-align:top;
 }
 
 
@@ -2068,7 +2069,7 @@ div.chart-filters input {
 	padding-left: 3px;
 }
 
-.status-tray img,span{
+.status-tray img, .status-tray span{
 	height:30px;
 	vertical-align:middle;
 }
@@ -2092,10 +2093,27 @@ blockquote{
 	height:100%;
 	display:block;
 }
-.home-marketing-section img{
-	max-width:100%;
-	width:100%;
-	height:100%;
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  img.bg {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+  }
 }
 
 .home-marketing-text-section{
