Fixed google image search display style so image height is auto but with a max of 200px. Also, add data validation in controller if qty or price is blank. This would have caused int() or float() to fail.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1502,7 +1502,8 @@ button[item="submit-for-approval-btn"]:hover{
 }
 
 .ariel-pinterest-item img{
-	height:200px; 
+	max-height:200px;
+	height:auto; 
 	width:auto;
 	max-width:90%;
 	margin-right:auto;
