--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1584,7 +1584,9 @@ button[item="submit-for-approval-btn"]:hover{
 	margin-right:auto;
 }
 #review-product-image{
-	height:250px;
+	max-height:250px;
+	height:auto;
+	width:auto;
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
