--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -426,7 +426,7 @@ items to give you a starting point for your listing.
 	<div id="step-3">
 		<div class="image-select-pane">
 			<table id="review-new-buy-order-table">
-			<tr><td valign="middle" class="box-shadow">
+			<tr><td class="box-shadow" style="vertical-align:middle;">
 				{% if order %}
 					<img id="review-product-image" src="{{ order.image }}" style="max-width:150px;width:100%;"/>
 				{% else %}
@@ -498,6 +498,7 @@ items to give you a starting point for your listing.
 				</div>
 			{% else %}
 				<span class="ariel-checkbox-regular" id="checkbox-agree-term-service">&nbsp;</span>I agree with <a href="" class="ariel-blue">Term of Service</a>
+				
 				<div class="ariel-button" style="margin-top:15px;">
 					<input style="border:none;background:transparent;" type="submit" value="Publish" />
 				</div>
