--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -217,7 +217,7 @@
 			</div>
 			
 			<div style="margin-top:10px;">
-			<a href="/cart/review?cart={{ cart.key.id() }}">
+			<a href="/cart/review?cart={{ cart.key.id() }}" class="command-link">
 				Review order <font face="Symbol">&#187;</font>
 			</a>
 			</div>
