--- a/template/base.html
+++ b/template/base.html
@@ -91,7 +91,7 @@
 						break;
 					default:
 						var msg=j$.parseJSON(result);
-						if (msg.length>0) j$('#you-have-chat').toggle( "pulsate" );
+						if (msg.length>0) j$('#you-have-chat').show( "pulsate" );
 						for (var i=0;i<msg.length;i++){						
 							refreshChannelMessage(formatChannelMessage(msg[i]['sender'],msg[i]['message']));
 						}
