Tweak datatable style

--- a/static/beautiful_tables/cell_styles.css
+++ b/static/beautiful_tables/cell_styles.css
@@ -4,7 +4,7 @@
  * Table control elements:   #719ba7
  * Header cells:             #66A9BD
  * Body header cells:        #91c5d4
- * Body content cells:       #d5eaf0
+ * Body content cells:       ##ffffff
  * Body content cells (alt): #bcd9e1
  * Footer header:            #b0cc7f
  * Footer content:           #d7e1c5
@@ -16,7 +16,7 @@
  * DataTables framework
  */
 div.dataTables_wrapper {
-	background-color: #719ba7;
+	background-color: #eee;
 }
 
 div.dataTables_length {
@@ -78,7 +78,7 @@ table.pretty th {
 /* Header cells */
 table.pretty thead th {
 	text-align: center;
-	background: #66a9bd;
+	background: #eee;
 }
 
 /* Body cells */
@@ -89,21 +89,21 @@ table.pretty tbody th {
 	
 table.pretty tbody td {
 	text-align: center;
-	background: #d5eaf0;
+	background: #66a9bd;
 }
 		
 table.pretty tbody tr.odd td { 
-	background: #bcd9e1;
+	background: #66a9bd;
 }
 
 /* Footer cells */	
 table.pretty tfoot th {
-	background: #b0cc7f;
+	background: #ccc;
 	text-align: left;
 }
 	
 table.pretty tfoot td {
-	background: #d7e1c5;
+	background: #ccc;
 	text-align: center;
 	font-weight: bold;
 }
