Footer li margin-right. Also, typo of Serafaith on the footer.

--- a/template/base.html
+++ b/template/base.html
@@ -317,7 +317,7 @@
 <div style="margin-right:auto;margin-left:auto;width:67%;">
 <ul>
 <li>&copy; 2013 All Rights Reservered by the Anthem Market Place<br />
-	Seraifaith Inc.
+	Serafaith Inc.
 </li>
 
 <li>
