--- a/template/base.html
+++ b/template/base.html
@@ -5,190 +5,18 @@
 	<meta charset="utf-8">
 	<title>Anthem Market Place</title>
 	<meta name="author" content="Feng X.">
-	<link rel="stylesheet" type="text/css" href="/static/css/reset-min.css">
+	<script type="text/javascript" src="/_ah/channel/jsapi"></script>
 
-	<!-- Channel API, must be the first one! -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-	<LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" TYPE="text/css" MEDIA=screen>
-
-	<!-- JS to turn a form into AJAX call -->
-	<script src="/static/formjs/jquery.form.js"></script> 
-
-	<!-- toast -->
-	<script src="/static/toast/jquery.toastmessage.js" type="text/javascript"></script> 
-	<LINK REL=StyleSheet HREF="/static/toast/css/jquery.toastmessage.css" TYPE="text/css" MEDIA=screen>
-	
-	<!-- jQuery dataTable -->
-	<script type="text/javascript" src="/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
-	<LINK REL=StyleSheet HREF="/static/DataTables-1.9.4/media/css/jquery.dataTables.css" TYPE="text/css" MEDIA=screen>
-	<link rel="stylesheet" type="text/css" href="/static/beautiful_tables/cell_styles.css">
-		
-	<!-- carousel -->
-	<script type="text/javascript" src="/static/carouFredSel-6.2.0/jquery.carouFredSel-6.2.0.js"></script>
-
-	<!-- easing -->
-	<!-- http://gsgd.co.uk/sandbox/jquery/easing/ -->
-	<script type="text/javascript" src="/static/easing/jquery.easing.min.js"></script>
-
-	<!-- tinyMCE -->
-	<script type="text/javascript" src="/static/tinymce/js/tinymce/jquery.tinymce.min.js"></script>	
-	<script type="text/javascript" src="/static/tinymce/js/tinymce/tinymce.min.js"></script>	
-		
-	<!-- highcharts -->
-	<script src="http://code.highcharts.com/highcharts.js"></script>
-	
-	<LINK REL=StyleShyeet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
-	<LINK REL=StyleSheet HREF="/static/css/screen.css" TYPE="text/css" MEDIA=screen>
-		
 	<script type="text/javascript">
-	// some global initialization
-	var j$=jQuery.noConflict();
- 
- 	function formatChannelMessage(sender_name,message){
-   		var html='';
-    	html+='<div class="channel-message">';
-    	html+='<span class="channel-sender">';
-    	html+=sender_name+'</span>';
-    	html+='<br />';
-    	html+='<div class="channel-message-content">';
-    	html+=message;
-    	html+='</div>';
-    	html+='</div>';
-  		return html;
- 	}
- 	function refreshChannelMessage(html){
- 		// as a circular buffer, showing 10
- 		// so the oldest gets bumped off the list
- 		
- 		var buffer=10;
- 		var existing=j$('#channel-displayer').find('div.channel-message');
- 		
- 		if (existing.length>=buffer){
- 			for (var i=0; i<(existing.length-buffer);i++){
- 				j$(existing[i]).remove();
- 			}
- 		}
- 		j$('#channel-displayer').append(html);
- 		var height=j$('#channel-displayer').outerHeight();
-		
-		// value "450" is the CSS height of this div#channel-displayer! 		
- 		if (parseInt(height)>=450){
- 			j$('#channel-displayer').addClass('y-scroll');
- 		}else{
- 			j$('#channel-displayer').removeClass('y-scroll'); 		
- 		}
- 	}
- 	
-	function pollChatMessage(){
-		j$.post(
-			'/channel/read/message',
-			{'receiver':'{{ me.nickname }}'},
-			function(result){
-				switch(result){
-					case '-1':
-						//j$().toastmessage('showNoticeToast','You have no message');
-						break;
-					default:
-						var msg=j$.parseJSON(result);
-						if (msg.length>0) j$('#you-have-chat').show( "pulsate" );
-						for (var i=0;i<msg.length;i++){						
-							refreshChannelMessage(formatChannelMessage(msg[i]['sender'],msg[i]['message']));
-						}
-						break;
-				}// end of switch
-			}
-		);
-	}
-	 	
-	j$(document).ready(function(){
-		// set up chat polling
-		var chat_message_poller;
-		
-		j$('input[type="date"]').datepicker();
-
-		// channel write message
-		j$('input[name="channel-message"]').keypress(function(event) {
-			
-    		var keycode = (event.keyCode ? event.keyCode : event.which);
-        	if(keycode == '13') {
-				var receiver_name=j$('input[name="receiver-name"]').val();
-				var message=j$('input[name="channel-message"]').val();
-				if (receiver_name=='@me'){
-					// talking to yourself?
-					// why even bother going through the server?									
-					j$().toastmessage('showWarningToast','Now you get me worried. Why are you talking to yourself?');
-					var html=formatChannelMessage('me',message);
-    				refreshChannelMessage(html);
-    				
-    				// clear input box
-    				j$('input[name="channel-message"]').val('');
-				}else{
-					var data={'sender': '{{ me.nickname }}',
-							'receiver': receiver_name,
-							'message':message};
-					j$.post(
-						'/channel/send/message',
-						data,
-						function(result){
-							switch (result){
-								case '-1':
-									j$().toastmessage('showNoticeToast','User is offline. Please try later.');
-									break;
-								default:
-									//j$().toastmessage('showNoticeToast','Sent');
-									var html=formatChannelMessage('me',message);
-    								refreshChannelMessage(html);
-    								
-    								// clear input box
-    								j$('input[name="channel-message"]').val('');
-									break;								
-							}
-						
-						}
-					);
-							
-				}
-            }else{
-        		var count=j$(this).val().length;
-   				j$('#channel-message-character-count').html(count);
-            }
-        });
-                    		
-        // channel window animation
-		j$('#channel-visible-switch').click(function(){
-			j$('#channel-container').show({
-				'duration':400,
-				'easing':'easeOutSine'
-			});
-			j$(this).hide();
-			
-			// start poller
-			chat_message_poller=setInterval(pollChatMessage,10000);
-
-		});
-		j$('#channel-collapse-switch').click(function(){
-			// cancel polling
-			clearInterval(chat_message_poller);
-			chat_message_poller=0;
-			
-			j$('#channel-container').hide();
-			j$('#channel-visible-switch').fadeIn(400);
-		});
-		
-		// click on channel messag will populate sender input
-		j$(document).on('click','div.channel-message',function(){
-			var sender=j$(this).find('span.channel-sender:first').html();
-			j$('input[name="receiver-name"]').val('@'+sender);
-		});
-	});
-	</script>	
-	
-	{% block customJS %}{% endblock %}
+		// some global initialization
+		var j$=jQuery.noConflict();
+	</script>
 </head>
 
 {% autoescape true %}
 <body>
+
 
 {% block header%}
 
@@ -334,6 +162,238 @@
 {% endblock %}
 
  
+	<link rel="stylesheet" type="text/css" href="/static/css/reset-min.css">
+
+	<!-- Channel API, must be the first one! -->
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+	<LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" TYPE="text/css" MEDIA=screen>
+
+	<!-- JS to turn a form into AJAX call -->
+	<script src="/static/formjs/jquery.form.js"></script> 
+
+	<!-- toast -->
+	<script src="/static/toast/jquery.toastmessage.js" type="text/javascript"></script> 
+	<LINK REL=StyleSheet HREF="/static/toast/css/jquery.toastmessage.css" TYPE="text/css" MEDIA=screen>
+	
+	<!-- jQuery dataTable -->
+	<script type="text/javascript" src="/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
+	<LINK REL=StyleSheet HREF="/static/DataTables-1.9.4/media/css/jquery.dataTables.css" TYPE="text/css" MEDIA=screen>
+	<link rel="stylesheet" type="text/css" href="/static/beautiful_tables/cell_styles.css">
+		
+	<!-- carousel -->
+	<script type="text/javascript" src="/static/carouFredSel-6.2.0/jquery.carouFredSel-6.2.0.js"></script>
+
+	<!-- easing -->
+	<!-- http://gsgd.co.uk/sandbox/jquery/easing/ -->
+	<script type="text/javascript" src="/static/easing/jquery.easing.min.js"></script>
+
+	<!-- tinyMCE -->
+	<script type="text/javascript" src="/static/tinymce/js/tinymce/jquery.tinymce.min.js"></script>	
+	<script type="text/javascript" src="/static/tinymce/js/tinymce/tinymce.min.js"></script>	
+		
+	<!-- highcharts -->
+	<script src="http://code.highcharts.com/highcharts.js"></script>
+	
+	<LINK REL=StyleShyeet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
+	<LINK REL=StyleSheet HREF="/static/css/screen.css" TYPE="text/css" MEDIA=screen>
+		
+	<script type="text/javascript">
+	// some global initialization
+	var j$=jQuery.noConflict();
+	
+	// set up chat polling
+	var chat_message_poller;
+	var channel, socket;
+		
+ 	function formatChannelMessage(sender_name,message){
+   		var html='';
+    	html+='<div class="channel-message">';
+    	html+='<span class="channel-sender">';
+    	html+=sender_name+'</span>';
+    	html+='<br />';
+    	html+='<div class="channel-message-content">';
+    	html+=message;
+    	html+='</div>';
+    	html+='</div>';
+  		return html;
+ 	}
+ 	function refreshChannelMessage(html){
+ 		// as a circular buffer, showing 10
+ 		// so the oldest gets bumped off the list
+ 		
+ 		var buffer=10;
+ 		var existing=j$('#channel-displayer').find('div.channel-message');
+ 		
+ 		if (existing.length>=buffer){
+ 			for (var i=0; i<(existing.length-buffer);i++){
+ 				j$(existing[i]).remove();
+ 			}
+ 		}
+ 		j$('#channel-displayer').append(html);
+ 		var height=j$('#channel-displayer').outerHeight();
+		
+		// value "450" is the CSS height of this div#channel-displayer! 		
+ 		if (parseInt(height)>=450){
+ 			j$('#channel-displayer').addClass('y-scroll');
+ 		}else{
+ 			j$('#channel-displayer').removeClass('y-scroll'); 		
+ 		}
+ 	}
+ 	
+	function pollChatMessage(){
+		j$.post(
+			'/channel/read/message',
+			{'receiver':'{{ me.nickname }}'},
+			function(result){
+				switch(result){
+					case '-1':
+						//j$().toastmessage('showNoticeToast','You have no message');
+						break;
+					default:
+						var msg=j$.parseJSON(result);
+						if (msg.length>0) j$('#you-have-chat').show( "pulsate" );
+						for (var i=0;i<msg.length;i++){						
+							refreshChannelMessage(formatChannelMessage(msg[i]['sender'],msg[i]['message']));
+						}
+						break;
+				}// end of switch
+			}
+		);
+	}
+
+	function onOpened(){
+		console.log('channel opened');
+	}
+	function onClose(){
+		console.log('channel closed');	
+	}
+	function onError(){
+		console.log('channel error');		
+	}
+	function onMessage(msg){
+		console.log('channel msg received');	
+		var data=j$.parseJSON(msg.data);
+		var html=formatChannelMessage(data['sender'],data['message']);	    	
+		refreshChannelMessage(html);
+	}
+
+	function applyChatToken(){
+		j$.post(
+			'/channel/token',
+			{'contact_id': '{{ me.key.id() }}',
+				'contact_name': '{{ me.nickname }}'},
+			function(result){
+				switch(result){
+					case '-2':
+						j$().toastmessage('showNoticeToast','All chats are in use by other users at this moment. Please try later.');
+						break;
+					case '-1':
+						j$().toastmessage('showNoticeToast','You have two chat windows open. Please close one and try me again.');
+						break;
+					default:
+						console.log('Received token: '+result);
+						channel = new goog.appengine.Channel(result);
+						socket = channel.open();
+						socket.onopen = onOpened;
+						socket.onmessage = onMessage;
+						socket.onerror = onError;
+						socket.onclose = onClose;						
+						break;
+				}// end of switch
+			}
+		);
+	}
+	function closeChatChannel(){
+		console.log('Closing socket');
+		if (typeof socket!= "undefined"){
+			socket.close();
+		}
+	}
+		 	
+	j$(document).ready(function(){
+		j$('input[type="date"]').datepicker();
+
+		// channel write message
+		j$('input[name="channel-message"]').keypress(function(event) {
+			
+    		var keycode = (event.keyCode ? event.keyCode : event.which);
+        	if(keycode == '13') {
+				var receiver_name=j$('input[name="receiver-name"]').val();
+				var message=j$('input[name="channel-message"]').val();
+				if (receiver_name=='@me'){
+					// talking to yourself?
+					// why even bother going through the server?									
+					j$().toastmessage('showWarningToast','Now you get me worried. Why are you talking to yourself?');
+					var html=formatChannelMessage('me',message);
+    				refreshChannelMessage(html);
+    				
+    				// clear input box
+    				j$('input[name="channel-message"]').val('');
+				}else{
+					var data={'sender': '{{ me.nickname }}',
+							'receiver': receiver_name,
+							'message':message};
+					j$.post(
+						//'/channel/send/message',
+						'/channel/route',
+						data,
+						function(result){
+							switch (result){
+								case '-1':
+									j$().toastmessage('showNoticeToast','User is offline. Please try later.');
+									break;
+								default:
+									//j$().toastmessage('showNoticeToast','Sent');
+									var html=formatChannelMessage('me',message);
+    								refreshChannelMessage(html);
+    								
+    								// clear input box
+    								j$('input[name="channel-message"]').val('');
+									break;								
+							}
+						
+						}
+					);
+							
+				}
+            }else{
+        		var count=j$(this).val().length;
+   				j$('#channel-message-character-count').html(count);
+            }
+        });
+                    		
+        // channel window animation
+		j$('#channel-visible-switch').click(function(){
+			j$('#channel-container').show({
+				'duration':400,
+				'easing':'easeOutSine'
+			});
+			j$(this).hide();
+			
+			// start poller
+			//chat_message_poller=setInterval(pollChatMessage,10000);
+			applyChatToken();
+
+		});
+		j$('#channel-collapse-switch').click(function(){
+			// cancel polling
+			//clearInterval(chat_message_poller);
+			//chat_message_poller=0;
+			closeChatChannel();
+			
+			j$('#channel-container').hide();
+			j$('#channel-visible-switch').fadeIn(400);
+		});
+		
+		// click on channel messag will populate sender input
+		j$(document).on('click','div.channel-message',function(){
+			var sender=j$(this).find('span.channel-sender:first').html();
+			j$('input[name="receiver-name"]').val('@'+sender);
+		});
+	});
+	</script>	
+	
+	{% block customJS %}{% endblock %}
 </body>
 {% endautoescape %}
 
