--- a/template/base.html
+++ b/template/base.html
@@ -197,7 +197,17 @@
 	<!-- highcharts -->
 	<script src="http://code.highcharts.com/highcharts.js"></script>
 	
-		
+	<!-- google analytics -->
+	<script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+  	ga('create', 'UA-41972175-1', 'anthem-market-place.appspot.com');
+	ga('send', 'pageview');	
+	</script>
+	
 	<script type="text/javascript">
 	// some global initialization
 	var j$=jQuery.noConflict();
