Fixed a bug in reportIncome query that as Doc I should see both payin and payouts.

--- a/template/ReportMyIncome.html
+++ b/template/ReportMyIncome.html
@@ -126,7 +126,7 @@ Your current account balance is: {{ me.cash }}
 								{% endif %}
 							{% else %}
 								{% if s.money_flow=='a-2-b' %}
-									gain
+									{{ s.amount }}
 								{% else %}
 									<span class="red">({{ s.amount }})</span>
 								{% endif %}
