--- a/static/DataTables-1.9.4/media/css/jquery.dataTables.css
+++ b/static/DataTables-1.9.4/media/css/jquery.dataTables.css
@@ -37,7 +37,7 @@ table.dataTable tr.even { background-color: white; }
 table.dataTable tr.odd td.sorting_1 { background-color: #fff; }
 table.dataTable tr.odd td.sorting_2 { background-color: #DADCFF; }
 table.dataTable tr.odd td.sorting_3 { background-color: #E0E2FF; }
-table.dataTable tr.even td.sorting_1 { background-color: #Eee; }
+table.dataTable tr.even td.sorting_1 {}
 table.dataTable tr.even td.sorting_2 { background-color: #F2F3FF; }
 table.dataTable tr.even td.sorting_3 { background-color: #F9F9FF; }
 
