Changed datatable style. It looks cleaner on the transaction page.

--- a/static/beautiful_tables/cell_styles.css
+++ b/static/beautiful_tables/cell_styles.css
@@ -93,7 +93,7 @@ table.pretty tbody td {
 }
 		
 table.pretty tbody tr.odd td { 
-	background: #66a9bd;
+	/*background: #66a9bd;*/
 }
 
 /* Footer cells */	
