--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -183,7 +183,7 @@
 			data.push([
 				'<a href="/buyorder/browse?owner={{b.owner.id()}}"><p class="product-list-item-footer-user" name="{{b.owner.get().nickname}}">{{ 
 				b.owner.get().nickname }}</p></a>',
-				'{{ b.name }}',
+				'<a href="/buyorder/browse/{{b.key.id()}}/">{{ b.name }}</a>',
 				'{{ b.description }}<br />{{b.owner.get().shipping_preference}}<br />{{b.owner.get().payment_preference}}',
 				'{{ b.unfilled_qty }}',
 				'{{ b.price }}'
