Minor bug fix on ReviewCart page. Slip table should not be float. Using two-col-table for payin and payout tables.

--- a/template/ManageCartAsSeller.html
+++ b/template/ManageCartAsSeller.html
@@ -187,8 +187,7 @@
 						{% endif %}
 			
 						{% if c.can_seller_reconcile(me.key) %}
-							<button class="my-button" item="approval-process" ownerId="{{ c.owner.id() }}" cartId="{{ c.key.id() }}">Seller 
-							Reconcile</button>
+							<button class="my-button" item="approval-process" ownerId="{{ c.owner.id() }}" cartId="{{ c.key.id() }}">Seller Reconcile</button>
 						{% endif %}
 
 						<!-- shipping status buttons -->
