Update can_seller_reconcile to allow reconciliation only once. It was a bug that allows user to set the status multiple times, though no harm done to set the field from True to True again.

--- a/static/beautiful_tables/cell_styles.css
+++ b/static/beautiful_tables/cell_styles.css
@@ -94,7 +94,13 @@ table.pretty tbody td {
 		
 table.pretty tbody tr.odd td { 
 	/*background: #66a9bd;*/
+	border-bottom:1px #ccc solid;
 }
+table.pretty tbody tr.even td { 
+	/*background: #66a9bd;*/
+	border-bottom:1px #ccc solid;
+}
+
 
 /* Footer cells */	
 table.pretty tfoot th {
