--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -606,7 +606,7 @@
 					
 			<div class="quick-pane" id="sec-payment">
 			<h4>Payments</h4>
-			<table class="two-col-table">
+			<table class="two-col-table" style="width:100%;">
 			<tr>
 			<!-- seller only view -->
 			{% if cart.terminal_seller==me.key or cart.broker==me.key %}
@@ -653,6 +653,9 @@
 						<tr><td>Transaction Created On</td>
 							<td>Amount</td>
 							<td>Recorded By</td>
+							{% if cart.can_delete_payout(me.key) %}
+							<td></td>
+							{% endif %}
 						</tr>
 					</thead>
 					<tbody>		
@@ -660,6 +663,13 @@
 						<tr><td>{{ s.get().created_time }}</td>
 							<td>{{ s.get().amount }}</td>
 							<td>{{ s.get().last_modified_by.get().nickname }}</td>
+							{% if cart.can_delete_payout(me.key) %}
+							<td>
+								<span item="delete-payout" itemId="{{ s.id() }}" class="command-link">
+								Delete
+								</span>
+							</td>
+							{% endif %}
 						</tr>
 					{% endfor %}
 					</tbody>
