--- a/template/base.html
+++ b/template/base.html
@@ -196,6 +196,8 @@
 		
 	<!-- highcharts -->
 	<script src="http://code.highcharts.com/highcharts.js"></script>
+	<script src="http://code.highcharts.com/highcharts-more.js"></script>
+	<script src="http://code.highcharts.com/modules/exporting.js"></script>
 	
 	<!-- google analytics -->
 	<script>
