Implementing google wallet. This obsoletes paypal button and manual membership adding. Further, the entire membership model has changed.

--- a/template/base.html
+++ b/template/base.html
@@ -209,7 +209,10 @@
   	ga('create', 'UA-41972175-1', 'anthem-market-place.appspot.com');
 	ga('send', 'pageview');	
 	</script>
-	
+
+	<!-- google wallet -->
+	<script src="https://sandbox.google.com/checkout/inapp/lib/buy.js"></script>	
+        	
 	<script type="text/javascript">
 	// some global initialization
 	var j$=jQuery.noConflict();
