--- a/template/ManageUserMembership.html
+++ b/template/ManageUserMembership.html
@@ -2,6 +2,30 @@
 
 {% block customJS %}
 <script type="text/javascript">
+//Success handler
+	var signupSuccessHandler = function(purchaseAction){
+		var orderId=purchaseAction['response']['orderId'];
+		j$().toastmessage('showNoticeToast','Thank you for your subscription! Your order number is '+orderId);
+    }	
+	var signupFailureHandler = function(purchaseAction){
+		var error=purchaseAction['response']['errorType'];
+		switch (error){
+			case 'MERCHANT_ERROR':
+				j$().toastmessage('showErrorToast','Purchase request contains errors. Contact system Admin.');
+				break;
+			case 'PURCHASE_CANCELLED':
+				j$().toastmessage('showErrorToast','Buyer cancelled purchase or declined payment');
+				break;
+			case 'POSTBACK_ERROR':
+				j$().toastmessage('showErrorToast','Failure to acknowledge postback notification');
+				break;
+			case 'INTERNAL_SERVER_ERROR':
+				j$().toastmessage('showErrorToast','Internal Google error');
+				break;
+				
+		}
+    }	
+
 	j$(document).ready(function(){
 		// overlay
 		j$('div.overlay').click(function(e){
@@ -23,16 +47,6 @@
 		});
 		
 		// membership start date always default to today!
-		var d=new Date();
-		j$('span[item="membership-start-date"]').html(j$.datepicker.formatDate('yy-mm-dd', d));
-		
-		j$('#show-new-membership').click(function(){
-			j$('select[item="membership-role"]').show();
-			j$('span[item="membership-role"]').hide();
-			j$('#btn-renew-membership').hide();
-			j$('#btn-save-new-membership').show();
-			j$('#div-new-membership').show();
-		});
 		
 		// this is a manual solution for now before we implement PayPal callback
 		j$('#btn-save-new-membership').click(function(){
@@ -69,30 +83,29 @@
 			);
 		});
 		
-		// renew membership
-		j$('span[item="renew-membership"]').click(function(){
-			j$('select[item="membership-role"]').hide();
-			j$('span[item="membership-role"]').html(j$(this).attr('role')).show();
-			j$('#btn-renew-membership').attr('role',j$(this).attr('role')).show();
-			j$('#btn-save-new-membership').hide();
-			j$('#div-new-membership').show();
-		});
-		
-		j$('#btn-renew-membership').click(function(){
-			j$.post(
-				'/user/membership/renew/'+j$(this).attr('role')+'/',
-				function(result){
-					j$().toastmessage('showSuccessToast','Thank you for renewing your membership!');
-				}				
-			);
-		});
-			
 		// level 1 navigation
 		j$('#nav-user').addClass('level-1-navigation-selected');
 		
 		// level 2 navigation
 		j$('.level-2-navigation').show();
 		j$('#nav-user-membership').addClass('level-2-navigation-selected');
+		
+		// signup membership
+		j$('span[item="signup-membership"]').click(function(){
+			var role=j$(this).attr('role');
+			j$.post(
+				'/wallet/token',
+				{'role':role},
+				function(result){
+					// we get a token
+					google.payments.inapp.buy({
+						'jwt'     : result,
+						'success' : signupSuccessHandler,
+						'failure' : signupFailureHandler
+					});
+				}
+			);
+		});
 	});
 </script>
 {% endblock %}
@@ -106,20 +119,14 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 </p>
 
 <div class="quick-pane">
-	<span class="command-link" id="show-new-membership" style="float:right;">Add a New Membership</span>
-	
-		
 	<table class="table-row-border">
 	<thead>	<tr><td>Role</td>
 				<td>Status</td>
-				<td>Monthly Payment ($)</td>
-				<td>Last Payment Received</td>
-				<td>Last Payment Amount</td>
-				<td>Expiration Date</td>
 				<td></td>
 			</tr>
 	</thead>
 	<tbody>
+		<!-- signed memberships -->
 		{% for m in me.memberships %}
 			<tr><td>{{ m.role }}</td>
 				<td>
@@ -129,17 +136,24 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 						Expired
 					{% endif %}
 				</td>
-				<td>{{ m.monthly_payment }}</td>
-				<td>{{ m.last_payment_received_date }}</td>
-				<td>{{ m.last_payment_amount }}</td>
-				<td>{{ m.expiration_date }}</td>
 				<td>
 					{% if m.is_active and m.role=='Trial' %}
 					{% elif m.is_active %}
 						<span class="command-link" role="{{ m.role }}" item="cancel-membership">Cancel</span>
 					{% else %}
-						<span class="command-link" role="{{ m.role }}" item="renew-membership">Renew</span>
+						<span class="command-link" role="{{ m.role }}" item="signup-membership">Signup</span>
 					{% endif %}
+				</td>
+			</tr>
+		{% endfor %}
+		
+		<!-- unsigned memberships -->
+		{% for m in membership_options %}
+			<tr>
+				<td>{{ m }}
+				</td><td>
+				</td><td>
+					<span class="command-link" role="{{ m }}" item="signup-membership">Signup</span>
 				</td>
 			</tr>
 		{% endfor %}
@@ -167,7 +181,8 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 			<tbody>
 				<tr><td>
 					<select item="membership-role">
-						{% for role,fee in membership_options.iteritems() %}
+					
+						{% for role in membership_options %}
 							<option value="{{ role }}">{{ role }}</option>
 						{% endfor %}
 					</select>
